# paradygmaty-programowania-lista1

./: .gitignore  LICENSE  README.md
zad1/: CMakeLists.txt
zad1/app/: main.c
zad1/inc/: my_math.h
zad1/src_imperative/: my_math.c
zad1/src_iterative/: my_math.c
zad1/src_recursive/: my_math.c
zad2/: my_math.adb
zad2_rec/: main.adb  my_math.adb  my_math.ads  zad2.gpr
zad3/: iter.jl  rec.jl
zad4/: compile.sh  main.c  my_math.ads  my_math.h
zad5/: main.adb  my_math.c  my_math.h  my_math_ada.adb  my_math_ada.ads  temp.txt  zad5.gpr
zad6/: wrapper.jl
